--- a/absensi.html
+++ b/absensi.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perpustakaan Kartini - Kunjungan</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body>
+  <body background="/assets/icon/page-background.png">
     <!-- NAVBAR -->
     <div class="navbar">
       <div class="wrapper">
@@ -22,7 +22,7 @@
         </div>
         <div class="icon">
           <a href="/"><img src="/assets/icon/envelope-solid.svg" alt="" /></a>
-          <a href="/"><img src="/assets/icon/person-circle.svg" alt="" /></a>
+          <a href="/login.html"><img src="/assets/icon/person-circle.svg" alt="" /></a>
         </div>
       </div>
     </div>
@@ -63,6 +63,7 @@
               </tr>
             </tbody>
           </table>
+          <h3 style="background-color: white; margin-top: 20px;">Jumlah Pengujung Hari Ini : 10 Orang</h3>
         </div>
         <div class="container-right">
           <h3 style="margin-bottom: 10px">Absensi Pengujung</h3>
@@ -86,55 +87,29 @@
             </div>
             <div class="form-group">
               <label for="jam">Jam:</label>
-              <input type="time" id="jam" name="jam" required />
+              <input type="time" id="jam" name="jam" required disabled/>
             </div>
             <div class="form-group">
               <label for="tanggal">Tanggal:</label>
-              <input type="date" id="tanggal" name="tanggal" required />
+              <input type="date" id="tanggal" name="tanggal" required disabled/>
             </div>
             <button type="submit">Submit</button>
           </form>
         </div>
-      </div>
-
-      <div class="container-bottom">
-        <table>
-          <thead>
-            <tr>
-              <th>Kolom 1</th>
-              <th>Kolom 2</th>
-              <th>Kolom 3</th>
-              <th>Kolom 4</th>
-              <th>Kolom 5</th>
-              <th>Kolom 6</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Data 1</td>
-              <td>Data 2</td>
-              <td>Data 3</td>
-              <td>Data 4</td>
-              <td>Data 5</td>
-              <td>Data 6</td>
-            </tr>
-            <!-- Tambahkan baris data sesuai kebutuhan -->
-          </tbody>
-        </table>
       </div>
     </div>
 
     <!-- END MAIN -->
 
     <!-- FOTBAR -->
-    <!-- <div class="fotbar">
+    <div class="fotbar">
       <p>
         Jl. Kemakmuran No. 51 Karanganyar, Kec. Karanganyar, Kabupaten Kebumen,
         Jawa Tengah 54364
       </p>
       <p><a href="/">smansaka.kbm@gmail.com</a></p>
       <p>(0287) 551094</p>
-    </div> -->
+    </div>
     <!-- END FOTBAR -->
 
     <script type="text/javascript">
