--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Perpustakaan Kartini</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body>
+  <body background="assets/icon/page-background.png">
     <!-- NAVBAR -->
     <div class="navbar">
       <div class="wrapper">
@@ -22,7 +22,7 @@
         </div>
         <div class="icon">
           <a href="/"><img src="/assets/icon/envelope-solid.svg" alt="" /></a>
-          <a href="/"><img src="/assets/icon/person-circle.svg" alt="" /></a>
+          <a href="login.html"><img src="/assets/icon/person-circle.svg" alt="" /></a>
         </div>
       </div>
     </div>
