add more features

--- a/absensi.html
+++ b/absensi.html
@@ -32,7 +32,7 @@
     <div class="main-absensi">
       <div class="main-absensi-top">
         <div class="container-left">
-          <h3>Data Pengujung Hari Ini</h3>
+          <h3 style="width: 100%;">Data Pengujung Hari Ini</h3>
           <table>
             <thead>
               <tr>
@@ -63,10 +63,10 @@
               </tr>
             </tbody>
           </table>
-          <h3 style="background-color: white; margin-top: 20px;">Jumlah Pengujung Hari Ini : 10 Orang</h3>
+          <h3 style="background-color: white; margin-top: 20px; width: 100%;">Jumlah Pengujung Hari Ini : 10 Orang</h3>
         </div>
         <div class="container-right">
-          <h3 style="margin-bottom: 10px">Absensi Pengujung</h3>
+          <h3 style="margin-bottom: 10px; width: 100%;">Absensi Pengujung</h3>
           <form>
             <div class="form-group">
               <label for="nim">NISN:</label>
