--- a/peminjaman-buku.html
+++ b/peminjaman-buku.html
@@ -33,12 +33,12 @@
     <!-- MAIN -->
     <div class="main-absensi">
       <div class="main-absensi-top">
-        <div class="container-left table-swipe">
+        <div class="container-left table-container">
           <h3 id="tanggalLengkap2"></h3>
-          <table>
+          <table class="swipe-table">
             <thead>
               <tr>
-                <th width="27px">No.</th>
+                <th width="27px" >No.</th>
                 <th width="150px">Nama</th>
                 <th width="250px">Buku</th>
                 <th width="120px">Tanggal Peminjaman</th>
@@ -48,7 +48,7 @@
             </thead>
             <tbody>
               <tr>
-                <td>1</td>
+                <td style="text-align: center;">1</td>
                 <td>Rafli Hada Setiawan</td>
                 <td>Sebuah Seni untuk Berbicara</td>
                 <td>10 Juli 2023</td>
@@ -78,7 +78,7 @@
           </h3>
         </div>
         <div class="container-right">
-          <h3 style="margin-bottom: 10px">Form Peminjaman</h3>
+          <h3 style="margin-bottom: 10px; width: 100%;">Form Peminjaman</h3>
           <form>
             <div class="form-group">
               <label for="nim">NISN:</label>
