--- a/admin/data-admin.html
+++ b/admin/data-admin.html
@@ -132,7 +132,7 @@
         <div class="main-data-top">
           <h3>Data Admin</h3>
           <div
-            class="container-left table-swipe"
+            class="container-left table-swipe table-container"
             style="width: 100%; padding-bottom: 20px"
           >
             <table>
