--- a/admin/data-buku.html
+++ b/admin/data-buku.html
@@ -127,7 +127,7 @@
         <div class="main-data-top">
           <h3>Data Buku</h3>
           <div
-            class="container-left table-swipe"
+            class="container-left table-swipe table-container"
             style="width: 100%; padding-bottom: 10px">
             <table>
               <thead>
