--- a/peminjaman-buku.html
+++ b/peminjaman-buku.html
@@ -35,50 +35,52 @@
       <div class="main-absensi-top">
         <div class="container-left table-container">
           <h3 id="tanggalLengkap2"></h3>
-          <table class="swipe-table">
-            <thead>
-              <tr>
-                <th width="27px" >No.</th>
-                <th width="150px">Nama</th>
-                <th width="250px">Buku</th>
-                <th width="120px">Tanggal Peminjaman</th>
-                <th width="120px">Tanggal Kembali (Maks)</th>
-                <th width="300px">Keterangan</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td style="text-align: center;">1</td>
-                <td>Rafli Hada Setiawan</td>
-                <td>Sebuah Seni untuk Berbicara</td>
-                <td>10 Juli 2023</td>
-                <td>13 Juli 2023</td>
-                <td>Meminjam</td>
-              </tr>
-              <tr>
-                <td>20</td>
-                <td>Rafli Hada Setiawan</td>
-                <td>Sebuah Seni untuk Berbicara</td>
-                <td>10 Juli 2023</td>
-                <td>13 Juli 2023</td>
-                <td>Meminjam</td>
-              </tr>
-              <tr>
-                <td>100</td>
-                <td>Rafli Hada Setiawan</td>
-                <td>Sebuah Seni untuk Berbicara</td>
-                <td>10 Juli 2023</td>
-                <td>13 Juli 2023</td>
-                <td>Meminjam</td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="table-swipe">
+            <table>
+              <thead>
+                <tr>
+                  <th width="27px">No.</th>
+                  <th width="150px">Nama</th>
+                  <th width="250px">Buku</th>
+                  <th width="120px">Tanggal Peminjaman</th>
+                  <th width="120px">Tanggal Kembali (Maks)</th>
+                  <th width="300px">Keterangan</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td style="text-align: center">1</td>
+                  <td>Rafli Hada Setiawan</td>
+                  <td>Sebuah Seni untuk Berbicara</td>
+                  <td>10 Juli 2023</td>
+                  <td>13 Juli 2023</td>
+                  <td>Meminjam</td>
+                </tr>
+                <tr>
+                  <td>20</td>
+                  <td>Rafli Hada Setiawan</td>
+                  <td>Sebuah Seni untuk Berbicara</td>
+                  <td>10 Juli 2023</td>
+                  <td>13 Juli 2023</td>
+                  <td>Meminjam</td>
+                </tr>
+                <tr>
+                  <td>100</td>
+                  <td>Rafli Hada Setiawan</td>
+                  <td>Sebuah Seni untuk Berbicara</td>
+                  <td>10 Juli 2023</td>
+                  <td>13 Juli 2023</td>
+                  <td>Meminjam</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
           <h3 style="background-color: white; margin-top: 20px">
             Jumlah Pengujung Hari Ini : 10 Orang
           </h3>
         </div>
         <div class="container-right">
-          <h3 style="margin-bottom: 10px; width: 100%;">Form Peminjaman</h3>
+          <h3 style="margin-bottom: 10px; width: 100%">Form Peminjaman</h3>
           <form>
             <div class="form-group">
               <label for="nim">NISN:</label>
@@ -87,7 +89,8 @@
                 id="nim"
                 name="nim"
                 onkeydown="return hanyaAngka(event);"
-                required />
+                required
+              />
             </div>
             <div class="form-group">
               <label for="nama">Nama:</label>
@@ -103,7 +106,13 @@
             </div>
             <div class="form-group">
               <label for="keterangan">Keterangan:</label>
-              <input type="text" id="keterangan" name="keterangan" required style="height: 50px;"/>
+              <input
+                type="text"
+                id="keterangan"
+                name="keterangan"
+                required
+                style="height: 50px"
+              />
             </div>
             <div class="form-group">
               <label for="tanggal">Tanggal:</label>
@@ -112,7 +121,8 @@
                 id="tanggal"
                 name="tanggal"
                 required
-                disabled />
+                disabled
+              />
             </div>
             <button type="submit">Submit</button>
           </form>
