--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>Perpustakaan Kartini - Login</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body background="assets/icon/page-background.png">
+  <body background="./assets/icon/page-background.png">
     <div class="main" style="height: 100vh">
       <div
         class="content"
@@ -18,7 +18,7 @@
           border-radius: 5px;
           box-shadow: inset 0 6px 10px rgba(0, 0, 0, 0.2);
         ">
-        <img src="/assets/icon/logo.png" style="width: 30%" />
+        <img src="./assets/icon/logo.png" style="width: 30%" />
         <h2 style="margin-bottom: 20px">
           Selamat Datang di Perpustakaan Kartini
         </h2>
@@ -27,7 +27,7 @@
             <div class="form-group-login">
               <div class="input-icon">
                 <img
-                  src="/assets/icon/user.png"
+                  src="./assets/icon/user.png"
                   alt="Username Icon"
                   style="width: 20px"
                   class="icon-login" />
@@ -42,8 +42,8 @@
             <div class="form-group-login">
               <div class="input-icon">
                 <img
-                  src="/assets/icon/lock.png"
-                  alt="Username Icon"
+                  src="./assets/icon/lock.png"
+                  alt="Username Icon" 
                   style="width: 20px"
                   class="icon-login" />
                 <input
@@ -58,7 +58,7 @@
             <div class="form-group-login">
               <div class="input-icon">
                 <img
-                  src="/assets/icon/users.png"
+                  src="./assets/icon/users.png"
                   alt="Username Icon"
                   style="width: 20px"
                   class="icon-login" />
